--- a/tensorflow_v2/notebooks/4_Utils/save_restore_model.ipynb
+++ b/tensorflow_v2/notebooks/4_Utils/save_restore_model.ipynb
@@ -147,26 +147,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 50, loss: 535.380981, accuracy: 0.656250\n",
-      "step: 100, loss: 354.681152, accuracy: 0.765625\n",
-      "step: 150, loss: 225.300934, accuracy: 0.785156\n",
-      "step: 200, loss: 163.948761, accuracy: 0.859375\n",
-      "step: 250, loss: 129.653534, accuracy: 0.878906\n",
-      "step: 300, loss: 170.743576, accuracy: 0.859375\n",
-      "step: 350, loss: 97.912575, accuracy: 0.910156\n",
-      "step: 400, loss: 144.119141, accuracy: 0.906250\n",
-      "step: 450, loss: 164.991943, accuracy: 0.875000\n",
-      "step: 500, loss: 145.191666, accuracy: 0.871094\n",
-      "step: 550, loss: 82.272644, accuracy: 0.925781\n",
-      "step: 600, loss: 149.180237, accuracy: 0.878906\n",
-      "step: 650, loss: 127.171280, accuracy: 0.871094\n",
-      "step: 700, loss: 116.045761, accuracy: 0.910156\n",
-      "step: 750, loss: 92.582680, accuracy: 0.906250\n",
-      "step: 800, loss: 108.238007, accuracy: 0.894531\n",
-      "step: 850, loss: 92.755638, accuracy: 0.894531\n",
-      "step: 900, loss: 69.131119, accuracy: 0.902344\n",
-      "step: 950, loss: 67.176285, accuracy: 0.921875\n",
-      "step: 1000, loss: 104.205658, accuracy: 0.890625\n"
+      "WARNING:tensorflow:From c:\\python36\\lib\\site-packages\\tensorflow_core\\python\\ops\\math_grad.py:1394: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "step: 50, loss: 791.386108, accuracy: 0.550781\n",
+      "step: 100, loss: 294.025391, accuracy: 0.773438\n",
+      "step: 150, loss: 271.468811, accuracy: 0.789062\n",
+      "step: 200, loss: 180.835571, accuracy: 0.843750\n",
+      "step: 250, loss: 163.316574, accuracy: 0.867188\n",
+      "step: 300, loss: 241.438553, accuracy: 0.816406\n",
+      "step: 350, loss: 149.326202, accuracy: 0.867188\n",
+      "step: 400, loss: 156.769440, accuracy: 0.890625\n",
+      "step: 450, loss: 110.610695, accuracy: 0.906250\n",
+      "step: 500, loss: 166.731552, accuracy: 0.859375\n",
+      "step: 550, loss: 143.264587, accuracy: 0.878906\n",
+      "step: 600, loss: 143.774734, accuracy: 0.867188\n",
+      "step: 650, loss: 121.462555, accuracy: 0.898438\n",
+      "step: 700, loss: 134.480087, accuracy: 0.898438\n",
+      "step: 750, loss: 60.859455, accuracy: 0.929688\n",
+      "step: 800, loss: 93.961075, accuracy: 0.910156\n",
+      "step: 850, loss: 81.390800, accuracy: 0.886719\n",
+      "step: 900, loss: 134.890671, accuracy: 0.890625\n",
+      "step: 950, loss: 109.002342, accuracy: 0.886719\n",
+      "step: 1000, loss: 140.267654, accuracy: 0.886719\n"
      ]
     }
    ],
@@ -214,7 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "'./tf-example/ckpt-1'"
+       "'./tf-example\\\\ckpt-1'"
       ]
      },
      "execution_count": 9,
@@ -235,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.09673191"
+       "-0.076947495"
       ]
      },
      "execution_count": 10,
@@ -267,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.0083419625"
+       "-0.00136105"
       ]
      },
      "execution_count": 12,
@@ -288,7 +291,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x12cf965d0>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x1665727a4e0>"
       ]
      },
      "execution_count": 13,
@@ -313,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.09673191"
+       "-0.076947495"
       ]
      },
      "execution_count": 14,
@@ -444,16 +447,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 100, loss: 2.188605, accuracy: 0.902344\n",
-      "step: 200, loss: 2.182990, accuracy: 0.929688\n",
-      "step: 300, loss: 2.180439, accuracy: 0.945312\n",
-      "step: 400, loss: 2.178496, accuracy: 0.957031\n",
-      "step: 500, loss: 2.177517, accuracy: 0.968750\n",
-      "step: 600, loss: 2.177163, accuracy: 0.968750\n",
-      "step: 700, loss: 2.177454, accuracy: 0.960938\n",
-      "step: 800, loss: 2.177589, accuracy: 0.960938\n",
-      "step: 900, loss: 2.176507, accuracy: 0.964844\n",
-      "step: 1000, loss: 2.177557, accuracy: 0.960938\n"
+      "step: 100, loss: 2.182346, accuracy: 0.941406\n",
+      "step: 200, loss: 2.181418, accuracy: 0.945312\n",
+      "step: 300, loss: 2.178736, accuracy: 0.957031\n",
+      "step: 400, loss: 2.180091, accuracy: 0.949219\n",
+      "step: 500, loss: 2.176754, accuracy: 0.972656\n",
+      "step: 600, loss: 2.177945, accuracy: 0.957031\n",
+      "step: 700, loss: 2.174615, accuracy: 0.984375\n",
+      "step: 800, loss: 2.176530, accuracy: 0.968750\n",
+      "step: 900, loss: 2.176637, accuracy: 0.968750\n",
+      "step: 1000, loss: 2.175076, accuracy: 0.976562\n"
      ]
     }
    ],
@@ -496,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.101562\n"
+      "accuracy: 0.058594\n"
      ]
     }
    ],
@@ -516,7 +519,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x13118b950>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x1663808b9e8>"
       ]
      },
      "execution_count": 23,
@@ -538,7 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.960938\n"
+      "accuracy: 0.976562\n"
      ]
     }
    ],
@@ -551,21 +554,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
