--- a/tensorflow_v2/notebooks/5_DataManagement/tfrecords.ipynb
+++ b/tensorflow_v2/notebooks/5_DataManagement/tfrecords.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
     "                continue\n",
     "            survived, pclass, name, sex, age, sibsp, parch, ticket, fare = record\n",
     "            # Parse each csv row to TF Example using the above functions.\n",
-    "            example = convert_to_tfexample(int(survived), int(pclass), name, sex, float(age), int(sibsp), int(parch), ticket, float(fare))\n",
+    "            example = convert_to_tfexample(int(survived), int(pclass), name.encode(), sex.encode(), float(age), int(sibsp), int(parch), ticket.encode(), float(fare))\n",
     "            # Serialize each TF Example to string, and write to TFRecord file.\n",
     "            w.write(example.SerializeToString())"
    ]
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,17 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0]\n",
-      "['Gallagher, Mr. Martin' 'Fortune, Miss. Mabel Helen'\n",
-      " 'Andersson, Mr. Johan Samuel' 'Jensen, Mr. Niels Peder']\n",
-      "[  7.7417 263.       7.775    7.8542]\n"
+      "[1 1 1 1]\n",
+      "[b'Clarke, Mrs. Charles V (Ada Maria Winfield)' b'Hassab, Mr. Hammad'\n",
+      " b'Davison, Mrs. Thomas Henry (Mary E Finck)'\n",
+      " b'Homer, Mr. Harry (\"Mr E Haven\")']\n",
+      "[26.     76.7292 16.1    26.55  ]\n"
      ]
     }
    ],
@@ -222,21 +223,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
