--- a/tensorflow_v2/notebooks/0_Prerequisite/mnist_dataset_intro.ipynb
+++ b/tensorflow_v2/notebooks/0_Prerequisite/mnist_dataset_intro.ipynb
@@ -1,10 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "# MNIST Dataset Introduction\n",
@@ -28,15 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/train-images-idx3-ubyte.gz\n",
+      "Extracting ./data/train-labels-idx1-ubyte.gz\n",
+      "Extracting ./data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting ./data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "# Import MNIST\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "mnist = input_data.read_data_sets(\"/tmp/data/\", one_hot=True)\n",
+    "import input_data\n",
+    "mnist = input_data.read_data_sets(\"./data/\", one_hot=True)\n",
     "\n",
     "# Load data\n",
     "X_train = mnist.train.images\n",
@@ -54,10 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get the next 64 images array and labels\n",
@@ -74,23 +79,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
