--- a/tensorflow_v2/notebooks/3_NeuralNetworks/dynamic_rnn.ipynb
+++ b/tensorflow_v2/notebooks/3_NeuralNetworks/dynamic_rnn.ipynb
@@ -220,27 +220,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 1, loss: 0.695558, accuracy: 0.562500\n",
-      "step: 100, loss: 0.664089, accuracy: 0.609375\n",
-      "step: 200, loss: 0.408653, accuracy: 0.812500\n",
-      "step: 300, loss: 0.417392, accuracy: 0.828125\n",
-      "step: 400, loss: 0.495420, accuracy: 0.765625\n",
-      "step: 500, loss: 0.524736, accuracy: 0.703125\n",
-      "step: 600, loss: 0.401653, accuracy: 0.859375\n",
-      "step: 700, loss: 0.315812, accuracy: 0.906250\n",
-      "step: 800, loss: 0.394490, accuracy: 0.828125\n",
-      "step: 900, loss: 0.327425, accuracy: 0.875000\n",
-      "step: 1000, loss: 0.312831, accuracy: 0.843750\n",
-      "step: 1100, loss: 0.251562, accuracy: 0.875000\n",
-      "step: 1200, loss: 0.192276, accuracy: 0.906250\n",
-      "step: 1300, loss: 0.173289, accuracy: 0.906250\n",
-      "step: 1400, loss: 0.159411, accuracy: 0.937500\n",
-      "step: 1500, loss: 0.138854, accuracy: 0.921875\n",
-      "step: 1600, loss: 0.046906, accuracy: 0.984375\n",
-      "step: 1700, loss: 0.121232, accuracy: 0.937500\n",
-      "step: 1800, loss: 0.067761, accuracy: 1.000000\n",
-      "step: 1900, loss: 0.134532, accuracy: 0.968750\n",
-      "step: 2000, loss: 0.090837, accuracy: 0.953125\n"
+      "WARNING:tensorflow:From c:\\python36\\lib\\site-packages\\tensorflow_core\\python\\keras\\backend.py:3983: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "step: 1, loss: 0.691189, accuracy: 0.515625\n",
+      "step: 100, loss: 0.643988, accuracy: 0.718750\n",
+      "step: 200, loss: 0.463902, accuracy: 0.750000\n",
+      "step: 300, loss: 0.436415, accuracy: 0.765625\n",
+      "step: 400, loss: 0.421804, accuracy: 0.812500\n",
+      "step: 500, loss: 0.437113, accuracy: 0.796875\n",
+      "step: 600, loss: 0.368005, accuracy: 0.828125\n",
+      "step: 700, loss: 0.305867, accuracy: 0.859375\n",
+      "step: 800, loss: 0.246248, accuracy: 0.828125\n",
+      "step: 900, loss: 0.162951, accuracy: 0.906250\n",
+      "step: 1000, loss: 0.095159, accuracy: 0.984375\n",
+      "step: 1100, loss: 0.174489, accuracy: 0.921875\n",
+      "step: 1200, loss: 0.098886, accuracy: 0.937500\n",
+      "step: 1300, loss: 0.077622, accuracy: 0.984375\n",
+      "step: 1400, loss: 0.096327, accuracy: 0.968750\n",
+      "step: 1500, loss: 0.117289, accuracy: 0.953125\n",
+      "step: 1600, loss: 0.294822, accuracy: 0.906250\n",
+      "step: 1700, loss: 0.093592, accuracy: 0.937500\n",
+      "step: 1800, loss: 0.144718, accuracy: 0.953125\n",
+      "step: 1900, loss: 0.064191, accuracy: 0.984375\n",
+      "step: 2000, loss: 0.023504, accuracy: 1.000000\n"
      ]
     }
    ],
@@ -260,21 +263,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
